# contempart-eccv2020

./: .env.example  .gitignore  .pre-commit-config.yaml  PLAN.md  README.md  pyproject.toml
archive/: step4_distances.py
results/: artist_list.csv  figure4_clustering.csv  image_list.csv  inventory.md  reproduction_status.md  section62_cramers_v.csv  table2.csv  table3.csv
src/: core.py  paths.py  step0_data.py  step1_extract_vgg.py  step3_archetype.py  step3_cluster.py  step4_distances.py  step4_network.py  step5_correlations.py  step5_variance.py  step6_correlations.py  step6_visualize.py  step7_association.py  step7_visualize.py  step8_cluster.py  step9_association.py
tests/: test_core.py  test_reproduction.py
