[project]
name = "contempart-eccv2020"
version = "0.1.0"
description = "Reproduction of the contempArt ECCV Workshop 2020 analysis"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "Nikolai Huckle" }]
dependencies = [
    "matplotlib>=3.10.8",
    "node2vec>=0.4.3",
    "numpy>=2.4.4",
    "pandas>=3.0.1",
    "py-pcha>=0.1.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "tqdm>=4.67.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.8",
    "pandas-stubs>=3.0.0",
    "types-tqdm>=4.67.3.20260303",
    "types-networkx>=3.6.1.20260321",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
    "PIE",  # misc. lint
    "C4",   # comprehension style
    "PT",   # pytest style
    "ERA",  # commented-out code
]
ignore = [
    "E501",  # line too long
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["sklearn.*", "scipy.*", "matplotlib.*", "torchvision.*", "py_pcha.*", "node2vec.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
